Add indicators to the image carousel, based on the number of images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="image-carousel-main">
       <div class="image-container js-image-container"></div>
-      <div class="image-indicator"><div></div><div></div></div>
+      <div class="image-indicator-container js-image-indicator-container"></div>
     </div>
 
     <div class="control-container"><div class="carousel-control js-carousel-control js-next">></div></div>
